// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Brokers Component Brokers Empty matches Brokers Empty snapshot 1`] = `
<StaticRouter
  context={Object {}}
  location={
    Object {
      "pathname": "ui/clusters/local/brokers",
    }
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "ui/clusters/local/brokers",
          "search": "",
        },
        "push": [Function],
        "replace": [Function],
      }
    }
    staticContext={Object {}}
  >
    <Component
      theme={
        Object {
          "buttonStyles": Object {
            "fontSize": Object {
              "L": "16px",
              "M": "14px",
              "S": "14px",
            },
            "height": Object {
              "L": "40px",
              "M": "32px",
              "S": "24px",
            },
            "primary": Object {
              "backgroundColor": Object {
                "active": "#1414B8",
                "hover": "#1717CF",
                "normal": "#4F4FFF",
              },
              "color": "#FFFFFF",
              "invertedColors": Object {
                "active": "#1414B8",
                "hover": "#1717CF",
                "normal": "#4F4FFF",
              },
            },
            "secondary": Object {
              "backgroundColor": Object {
                "active": "#D5DADD",
                "hover": "#E3E6E8",
                "normal": "#F1F2F3",
              },
              "color": "#171A1C",
              "invertedColors": Object {
                "active": "#171A1C",
                "hover": "#454F54",
                "normal": "#73848C",
              },
            },
          },
          "menuStyles": Object {
            "backgroundColor": Object {
              "active": "#E3E6E8",
              "hover": "#F1F2F3",
              "normal": "#FFFFFF",
            },
            "color": Object {
              "active": "#171A1C",
              "hover": "#73848C",
              "normal": "#73848C",
            },
          },
          "paginationStyles": Object {
            "borderColor": Object {
              "active": "#454F54",
              "disabled": "#C7CED1",
              "hover": "#73848C",
              "normal": "#ABB5BA",
            },
            "color": Object {
              "active": "#171A1C",
              "disabled": "#C7CED1",
              "hover": "#171A1C",
              "normal": "#171A1C",
            },
          },
          "primaryTabStyles": Object {
            "borderColor": Object {
              "active": "#4F4FFF",
              "hover": "transparent",
              "normal": "transparent",
            },
            "color": Object {
              "active": "#171A1C",
              "hover": "#171A1C",
              "normal": "#73848C",
            },
          },
          "secondaryTabStyles": Object {
            "backgroundColor": Object {
              "active": "#E3E6E8",
              "hover": "#F1F2F3",
              "normal": "#FFFFFF",
            },
            "color": Object {
              "active": "#171A1C",
              "hover": "#171A1C",
              "normal": "#73848C",
            },
          },
          "selectStyles": Object {
            "borderColor": Object {
              "active": "#454F54",
              "disabled": "#E3E6E8",
              "hover": "#73848C",
              "normal": "#ABB5BA",
            },
            "color": Object {
              "active": "#171A1C",
              "disabled": "#ABB5BA",
              "hover": "#171A1C",
              "normal": "#171A1C",
            },
          },
          "tagStyles": Object {
            "backgroundColor": Object {
              "gray": "#E3E6E8",
              "green": "#D6F5E0",
              "yellow": "#FFEECC",
            },
            "color": "#171A1C",
          },
          "thStyles": Object {
            "backgroundColor": Object {
              "normal": "#FFFFFF",
            },
            "color": Object {
              "normal": "#73848C",
            },
            "previewColor": Object {
              "normal": "#4F4FFF",
            },
          },
        }
      }
    >
      <Brokers
        activeControllers={0}
        brokerCount={0}
        fetchBrokers={
          [MockFunction] {
            "calls": Array [
              Array [
                undefined,
              ],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": undefined,
              },
            ],
          }
        }
        fetchClusterStats={
          [MockFunction] {
            "calls": Array [
              Array [
                undefined,
              ],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": undefined,
              },
            ],
          }
        }
        inSyncReplicasCount={0}
        isFetched={false}
        offlinePartitionCount={0}
        onlinePartitionCount={0}
        outOfSyncReplicasCount={0}
        underReplicatedPartitionCount={0}
        version="1"
        zooKeeperStatus={0}
      >
        <div
          className="section"
        >
          <Styled(PageHeading)
            text="Brokers"
          >
            <PageHeading
              className="sc-jSgvzq feAFzU"
              text="Brokers"
            >
              <div
                className="sc-jSgvzq feAFzU"
              >
                <h1>
                  Brokers
                </h1>
                <div />
              </div>
            </PageHeading>
          </Styled(PageHeading)>
          <styled.div>
            <div
              className="sc-gKseQn XXMOX"
            >
              <MetricsWrapper
                title="Uptime"
              >
                <styled.div>
                  <div
                    className="sc-bdfBQB ewAWCQ"
                  >
                    <h5
                      className="is-7 has-text-weight-medium mb-2"
                    >
                      Uptime
                    </h5>
                    <div
                      className="indicatorsWrapper"
                    >
                      <Indicator
                        label="Total Brokers"
                      >
                        <styled.div>
                          <div
                            className="sc-gsTEea cvsrGp"
                          >
                            <div>
                              <div
                                className="indicator-label"
                              >
                                Total Brokers
                                 
                              </div>
                              0
                            </div>
                          </div>
                        </styled.div>
                      </Indicator>
                      <Indicator
                        label="Active Controllers"
                      >
                        <styled.div>
                          <div
                            className="sc-gsTEea cvsrGp"
                          >
                            <div>
                              <div
                                className="indicator-label"
                              >
                                Active Controllers
                                 
                              </div>
                              0
                            </div>
                          </div>
                        </styled.div>
                      </Indicator>
                      <Indicator
                        label="Zookeeper Status"
                      >
                        <styled.div>
                          <div
                            className="sc-gsTEea cvsrGp"
                          >
                            <div>
                              <div
                                className="indicator-label"
                              >
                                Zookeeper Status
                                 
                              </div>
                              <Styled(Tag)
                                color="gray"
                              >
                                <Tag
                                  className="sc-dlfnuX gTkaKb"
                                  color="gray"
                                >
                                  <p
                                    className="sc-dlfnuX gTkaKb"
                                  >
                                    offline
                                  </p>
                                </Tag>
                              </Styled(Tag)>
                            </div>
                          </div>
                        </styled.div>
                      </Indicator>
                      <Indicator
                        label="Version"
                      >
                        <styled.div>
                          <div
                            className="sc-gsTEea cvsrGp"
                          >
                            <div>
                              <div
                                className="indicator-label"
                              >
                                Version
                                 
                              </div>
                              1
                            </div>
                          </div>
                        </styled.div>
                      </Indicator>
                    </div>
                  </div>
                </styled.div>
              </MetricsWrapper>
              <MetricsWrapper
                title="Partitions"
              >
                <styled.div>
                  <div
                    className="sc-bdfBQB ewAWCQ"
                  >
                    <h5
                      className="is-7 has-text-weight-medium mb-2"
                    >
                      Partitions
                    </h5>
                    <div
                      className="indicatorsWrapper"
                    >
                      <Indicator
                        isAlert={true}
                        label="Online"
                      >
                        <styled.div>
                          <div
                            className="sc-gsTEea cvsrGp"
                          >
                            <div>
                              <div
                                className="indicator-label"
                              >
                                Online
                                 
                                <svg
                                  fill="none"
                                  height="4"
                                  viewBox="0 0 4 4"
                                  width="4"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <circle
                                    cx="2"
                                    cy="2"
                                    fill="#E61A1A"
                                    r="2"
                                  />
                                </svg>
                              </div>
                              <span
                                style={
                                  Object {
                                    "color": "#E51A1A",
                                  }
                                }
                              >
                                0
                              </span>
                              <span
                                style={
                                  Object {
                                    "color": "#ABB5BA",
                                  }
                                }
                              >
                                 
                                of 
                                0
                              </span>
                            </div>
                          </div>
                        </styled.div>
                      </Indicator>
                      <Indicator
                        label="URP"
                        title="Under replicated partitions"
                      >
                        <styled.div>
                          <div
                            className="sc-gsTEea cvsrGp"
                          >
                            <div
                              title="Under replicated partitions"
                            >
                              <div
                                className="indicator-label"
                              >
                                URP
                                 
                              </div>
                              0
                            </div>
                          </div>
                        </styled.div>
                      </Indicator>
                      <Indicator
                        label="In Sync Replicas"
                      >
                        <styled.div>
                          <div
                            className="sc-gsTEea cvsrGp"
                          >
                            <div>
                              <div
                                className="indicator-label"
                              >
                                In Sync Replicas
                                 
                              </div>
                              0
                            </div>
                          </div>
                        </styled.div>
                      </Indicator>
                      <Indicator
                        label="Out of Sync Replicas"
                      >
                        <styled.div>
                          <div
                            className="sc-gsTEea cvsrGp"
                          >
                            <div>
                              <div
                                className="indicator-label"
                              >
                                Out of Sync Replicas
                                 
                              </div>
                              0
                            </div>
                          </div>
                        </styled.div>
                      </Indicator>
                    </div>
                  </div>
                </styled.div>
              </MetricsWrapper>
            </div>
          </styled.div>
        </div>
        <styled.table
          isFullwidth={true}
        >
          <table
            className="sc-eCstlR kaTGqX"
          >
            <thead>
              <tr>
                <TableHeaderCell
                  title="Broker"
                >
                  <styled.th
                    className=""
                    title="Broker"
                  >
                    <th
                      className="sc-hKgJUU kwoanP"
                      title="Broker"
                    >
                      <span
                        className="title"
                      >
                        Broker
                      </span>
                    </th>
                  </styled.th>
                </TableHeaderCell>
                <TableHeaderCell
                  title="Segment size (Mb)"
                >
                  <styled.th
                    className=""
                    title="Segment size (Mb)"
                  >
                    <th
                      className="sc-hKgJUU kwoanP"
                      title="Segment size (Mb)"
                    >
                      <span
                        className="title"
                      >
                        Segment size (Mb)
                      </span>
                    </th>
                  </styled.th>
                </TableHeaderCell>
                <TableHeaderCell
                  title="Segment Count"
                >
                  <styled.th
                    className=""
                    title="Segment Count"
                  >
                    <th
                      className="sc-hKgJUU kwoanP"
                      title="Segment Count"
                    >
                      <span
                        className="title"
                      >
                        Segment Count
                      </span>
                    </th>
                  </styled.th>
                </TableHeaderCell>
              </tr>
            </thead>
            <tbody />
          </table>
        </styled.table>
      </Brokers>
    </Component>
  </Router>
</StaticRouter>
`;

exports[`Brokers Component Brokers matches snapshot 1`] = `
<StaticRouter
  context={Object {}}
  location={
    Object {
      "pathname": "ui/clusters/local/brokers",
    }
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "ui/clusters/local/brokers",
          "search": "",
        },
        "push": [Function],
        "replace": [Function],
      }
    }
    staticContext={Object {}}
  >
    <Component
      theme={
        Object {
          "buttonStyles": Object {
            "fontSize": Object {
              "L": "16px",
              "M": "14px",
              "S": "14px",
            },
            "height": Object {
              "L": "40px",
              "M": "32px",
              "S": "24px",
            },
            "primary": Object {
              "backgroundColor": Object {
                "active": "#1414B8",
                "hover": "#1717CF",
                "normal": "#4F4FFF",
              },
              "color": "#FFFFFF",
              "invertedColors": Object {
                "active": "#1414B8",
                "hover": "#1717CF",
                "normal": "#4F4FFF",
              },
            },
            "secondary": Object {
              "backgroundColor": Object {
                "active": "#D5DADD",
                "hover": "#E3E6E8",
                "normal": "#F1F2F3",
              },
              "color": "#171A1C",
              "invertedColors": Object {
                "active": "#171A1C",
                "hover": "#454F54",
                "normal": "#73848C",
              },
            },
          },
          "menuStyles": Object {
            "backgroundColor": Object {
              "active": "#E3E6E8",
              "hover": "#F1F2F3",
              "normal": "#FFFFFF",
            },
            "color": Object {
              "active": "#171A1C",
              "hover": "#73848C",
              "normal": "#73848C",
            },
          },
          "paginationStyles": Object {
            "borderColor": Object {
              "active": "#454F54",
              "disabled": "#C7CED1",
              "hover": "#73848C",
              "normal": "#ABB5BA",
            },
            "color": Object {
              "active": "#171A1C",
              "disabled": "#C7CED1",
              "hover": "#171A1C",
              "normal": "#171A1C",
            },
          },
          "primaryTabStyles": Object {
            "borderColor": Object {
              "active": "#4F4FFF",
              "hover": "transparent",
              "normal": "transparent",
            },
            "color": Object {
              "active": "#171A1C",
              "hover": "#171A1C",
              "normal": "#73848C",
            },
          },
          "secondaryTabStyles": Object {
            "backgroundColor": Object {
              "active": "#E3E6E8",
              "hover": "#F1F2F3",
              "normal": "#FFFFFF",
            },
            "color": Object {
              "active": "#171A1C",
              "hover": "#171A1C",
              "normal": "#73848C",
            },
          },
          "selectStyles": Object {
            "borderColor": Object {
              "active": "#454F54",
              "disabled": "#E3E6E8",
              "hover": "#73848C",
              "normal": "#ABB5BA",
            },
            "color": Object {
              "active": "#171A1C",
              "disabled": "#ABB5BA",
              "hover": "#171A1C",
              "normal": "#171A1C",
            },
          },
          "tagStyles": Object {
            "backgroundColor": Object {
              "gray": "#E3E6E8",
              "green": "#D6F5E0",
              "yellow": "#FFEECC",
            },
            "color": "#171A1C",
          },
          "thStyles": Object {
            "backgroundColor": Object {
              "normal": "#FFFFFF",
            },
            "color": Object {
              "normal": "#73848C",
            },
            "previewColor": Object {
              "normal": "#4F4FFF",
            },
          },
        }
      }
    >
      <Brokers
        activeControllers={1}
        brokerCount={1}
        diskUsage={
          Array [
            Object {
              "brokerId": 1,
              "segmentCount": 64,
              "segmentSize": 60718,
            },
          ]
        }
        fetchBrokers={
          [MockFunction] {
            "calls": Array [
              Array [
                undefined,
              ],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": undefined,
              },
            ],
          }
        }
        fetchClusterStats={
          [MockFunction] {
            "calls": Array [
              Array [
                undefined,
              ],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": undefined,
              },
            ],
          }
        }
        inSyncReplicasCount={64}
        isFetched={true}
        offlinePartitionCount={0}
        onlinePartitionCount={64}
        outOfSyncReplicasCount={0}
        underReplicatedPartitionCount={0}
        version="1"
        zooKeeperStatus={1}
      >
        <div
          className="section"
        >
          <Styled(PageHeading)
            text="Brokers"
          >
            <PageHeading
              className="sc-jSgvzq feAFzU"
              text="Brokers"
            >
              <div
                className="sc-jSgvzq feAFzU"
              >
                <h1>
                  Brokers
                </h1>
                <div />
              </div>
            </PageHeading>
          </Styled(PageHeading)>
          <styled.div>
            <div
              className="sc-gKseQn XXMOX"
            >
              <MetricsWrapper
                title="Uptime"
              >
                <styled.div>
                  <div
                    className="sc-bdfBQB ewAWCQ"
                  >
                    <h5
                      className="is-7 has-text-weight-medium mb-2"
                    >
                      Uptime
                    </h5>
                    <div
                      className="indicatorsWrapper"
                    >
                      <Indicator
                        label="Total Brokers"
                      >
                        <styled.div>
                          <div
                            className="sc-gsTEea cvsrGp"
                          >
                            <div>
                              <div
                                className="indicator-label"
                              >
                                Total Brokers
                                 
                              </div>
                              1
                            </div>
                          </div>
                        </styled.div>
                      </Indicator>
                      <Indicator
                        label="Active Controllers"
                      >
                        <styled.div>
                          <div
                            className="sc-gsTEea cvsrGp"
                          >
                            <div>
                              <div
                                className="indicator-label"
                              >
                                Active Controllers
                                 
                              </div>
                              1
                            </div>
                          </div>
                        </styled.div>
                      </Indicator>
                      <Indicator
                        label="Zookeeper Status"
                      >
                        <styled.div>
                          <div
                            className="sc-gsTEea cvsrGp"
                          >
                            <div>
                              <div
                                className="indicator-label"
                              >
                                Zookeeper Status
                                 
                              </div>
                              <Styled(Tag)
                                color="green"
                              >
                                <Tag
                                  className="sc-dlfnuX gOWcUL"
                                  color="green"
                                >
                                  <p
                                    className="sc-dlfnuX gOWcUL"
                                  >
                                    online
                                  </p>
                                </Tag>
                              </Styled(Tag)>
                            </div>
                          </div>
                        </styled.div>
                      </Indicator>
                      <Indicator
                        label="Version"
                      >
                        <styled.div>
                          <div
                            className="sc-gsTEea cvsrGp"
                          >
                            <div>
                              <div
                                className="indicator-label"
                              >
                                Version
                                 
                              </div>
                              1
                            </div>
                          </div>
                        </styled.div>
                      </Indicator>
                    </div>
                  </div>
                </styled.div>
              </MetricsWrapper>
              <MetricsWrapper
                title="Partitions"
              >
                <styled.div>
                  <div
                    className="sc-bdfBQB ewAWCQ"
                  >
                    <h5
                      className="is-7 has-text-weight-medium mb-2"
                    >
                      Partitions
                    </h5>
                    <div
                      className="indicatorsWrapper"
                    >
                      <Indicator
                        isAlert={true}
                        label="Online"
                      >
                        <styled.div>
                          <div
                            className="sc-gsTEea cvsrGp"
                          >
                            <div>
                              <div
                                className="indicator-label"
                              >
                                Online
                                 
                                <svg
                                  fill="none"
                                  height="4"
                                  viewBox="0 0 4 4"
                                  width="4"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <circle
                                    cx="2"
                                    cy="2"
                                    fill="#E61A1A"
                                    r="2"
                                  />
                                </svg>
                              </div>
                              <span
                                style={
                                  Object {
                                    "color": "#E51A1A",
                                  }
                                }
                              >
                                64
                              </span>
                              <span
                                style={
                                  Object {
                                    "color": "#ABB5BA",
                                  }
                                }
                              >
                                 
                                of 
                                64
                              </span>
                            </div>
                          </div>
                        </styled.div>
                      </Indicator>
                      <Indicator
                        label="URP"
                        title="Under replicated partitions"
                      >
                        <styled.div>
                          <div
                            className="sc-gsTEea cvsrGp"
                          >
                            <div
                              title="Under replicated partitions"
                            >
                              <div
                                className="indicator-label"
                              >
                                URP
                                 
                              </div>
                              0
                            </div>
                          </div>
                        </styled.div>
                      </Indicator>
                      <Indicator
                        label="In Sync Replicas"
                      >
                        <styled.div>
                          <div
                            className="sc-gsTEea cvsrGp"
                          >
                            <div>
                              <div
                                className="indicator-label"
                              >
                                In Sync Replicas
                                 
                              </div>
                              64
                            </div>
                          </div>
                        </styled.div>
                      </Indicator>
                      <Indicator
                        label="Out of Sync Replicas"
                      >
                        <styled.div>
                          <div
                            className="sc-gsTEea cvsrGp"
                          >
                            <div>
                              <div
                                className="indicator-label"
                              >
                                Out of Sync Replicas
                                 
                              </div>
                              0
                            </div>
                          </div>
                        </styled.div>
                      </Indicator>
                    </div>
                  </div>
                </styled.div>
              </MetricsWrapper>
            </div>
          </styled.div>
        </div>
        <styled.table
          isFullwidth={true}
        >
          <table
            className="sc-eCstlR kaTGqX"
          >
            <thead>
              <tr>
                <TableHeaderCell
                  title="Broker"
                >
                  <styled.th
                    className=""
                    title="Broker"
                  >
                    <th
                      className="sc-hKgJUU kwoanP"
                      title="Broker"
                    >
                      <span
                        className="title"
                      >
                        Broker
                      </span>
                    </th>
                  </styled.th>
                </TableHeaderCell>
                <TableHeaderCell
                  title="Segment size (Mb)"
                >
                  <styled.th
                    className=""
                    title="Segment size (Mb)"
                  >
                    <th
                      className="sc-hKgJUU kwoanP"
                      title="Segment size (Mb)"
                    >
                      <span
                        className="title"
                      >
                        Segment size (Mb)
                      </span>
                    </th>
                  </styled.th>
                </TableHeaderCell>
                <TableHeaderCell
                  title="Segment Count"
                >
                  <styled.th
                    className=""
                    title="Segment Count"
                  >
                    <th
                      className="sc-hKgJUU kwoanP"
                      title="Segment Count"
                    >
                      <span
                        className="title"
                      >
                        Segment Count
                      </span>
                    </th>
                  </styled.th>
                </TableHeaderCell>
              </tr>
            </thead>
            <tbody>
              <tr
                key="1"
              >
                <td>
                  1
                </td>
                <td>
                  <BytesFormatted
                    value={60718}
                  >
                    <span>
                      59KB
                    </span>
                  </BytesFormatted>
                </td>
                <td>
                  64
                </td>
              </tr>
            </tbody>
          </table>
        </styled.table>
      </Brokers>
    </Component>
  </Router>
</StaticRouter>
`;
